# mgear

./: .gitignore  .readthedocs.yaml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  TERMINOLOGY.md  batch_translate.py  batch_translate_all.py  build.sh  build_accel.bat  build_accel.sh  build_solvers.bat  build_solvers.sh  drag_n_drop_install.py  releaseLog.rst  test_debug.py  test_regex.py  test_regex2.py  test_strings.py  test_translate.py  test_translate_debug.py  translate_advanced.py  translate_components.py  translate_with_glossary.py
docs/source/: animPickerUserDocumentation.rst  animbitsUserDocumentation.rst  flexUserDocumentation.rst  index.rst  rigbitsUserDocumentation.rst  shifterUserDocumentation.rst  simpleRigUserDocumentation.rst  skinningUserDocumentation.rst  utilbitsUserDocumentation.rst
python_src/: CMakeLists.txt
python_src/include/: rgp_accel.h
python_src/src/: bindings.cpp  rgp_accel.cpp
release/: mGear.mod
release/scripts/cvwrap/: menu.py
release/scripts/mgear/: __init__.py  menu.py
release/scripts/mgear/anim_picker/: __init__.py  constants.py  gui.py  main_window.py  menu.py  picker_node.py  scene.py  tab_widget.py  version.py  view.py
release/scripts/mgear/anim_picker/handlers/: __init__.py  action_handlers.py  file_handlers.py  maya_handlers.py  mode_handlers.py  python_handlers.py  widget_handlers.py
release/scripts/mgear/anim_picker/shapes/: default_shapes.json
release/scripts/mgear/anim_picker/widgets/: alignment.py  background_manipulator.py  background_model.py  background_transform.py  basic.py  color_palette.py  edit_panel.py  edit_undo.py  graphics.py  item_manipulator.py  item_model.py  manipulator_transform.py  mirror.py  overlay.py  overlay_widgets.py  picker_item.py  picker_widgets.py  shape_library.py  silhouette.py  tiled_layout.py  tiled_view.py  tool_bar.py  visibility.py  widget_binding.py
release/scripts/mgear/animbits/: channel_master.py  channel_master_node.py  channel_master_utils.py  channel_master_widgets.py  humanIkMapper.py  menu.py  softTweakWindowUI.py  softTweaks.py
release/scripts/mgear/animbits/cache_manager/: dialog.py
release/scripts/mgear/animbits/spring_manager/: setup.py  ui.py
release/scripts/mgear/cfxbits/: menu.py
release/scripts/mgear/cfxbits/xgenboost/: guide.py  ui.py  ui_form.py  xgen_handler.py
release/scripts/mgear/compatible/: compatible_comp.py  compatible_comp_ui.py  compatible_comp_ui.ui  compatible_components_dagmenu.py  guide_manager_compatible_comp.py
release/scripts/mgear/core/: __init__.py  anim_utils.py  applyop.py  attribute.py  blendshape.py  color.py  curve.py  dag.py  dagmenu.py  deboor.py  deformer.py  dragdrop.py  icon.py  menu.py  mesh.py  meshNavigation.py  node.py  pickWalk.py  plugin_utils.py  profile.py  pycodeeditor.py  pyqt.py  skin.py  string.py  surface.py  svg_import.py  transform.py  upv_visualizer.py  utils.py  vector.py  widgets.py  wmap.py
release/scripts/mgear/crank/: crank_tool.py  crank_ui.py  menu.py
release/scripts/mgear/pymaya/: attr.py  cmd.py  geometry.py  node.py
release/scripts/mgear/rigbits/: __init__.py  blendShapes.py  channelWrangler.py  channelWranglerUI.py  cycleTweaks.py  ghost.py  mGearWeightNode_io.py  menu.py  mirror_controls.py  proxyGeo.py  proxySlicer.py  rbf_io.py  rbf_node.py  sdk_io.py  tweaks.py  utils.py  weightNode_io.py  widgets.py
release/scripts/mgear/rigbits/blendshape_transfer/: __init__.py  core.py  ui.py
release/scripts/mgear/rigbits/evaluation_partition/: __init__.py  core.py  ui.py  widgets.py
release/scripts/mgear/rigbits/facial_rigger/: __init__.py  brow_rigger.py  constraints.py  eye_rigger.py  helpers.py  lib.py  lips_rigger.py
release/scripts/mgear/rigbits/facial_rigger2/: __init__.py  eye_rigger.py  eye_riggerUI.py  helpers.py  lib.py
release/scripts/mgear/rigbits/gimmick_tool/: core.py  gimmick_tool.py  main.py  ui.py
release/scripts/mgear/rigbits/rbf_manager2/: rbf_manager_ui.py  widget.py
release/scripts/mgear/rigbits/sdk_creator/: __init__.py  core.py  ui.py
release/scripts/mgear/rigbits/sdk_manager/: SDK_manager.ui  SDK_manager_ui.py  SDK_transfer_ui.py  core.py  widgets.py
release/scripts/mgear/rigbits/space_manager/: spaceManagerUI.py  spaceManagerUtils.py
release/scripts/mgear/rigbits/wire_to_skinning/: __init__.py  core.py  ui.py  widgets.py
release/scripts/mgear/shifter/: __init__.py  _rgp_accel.py  _rgp_accel_cpp.cp310-win_amd64.pyd  _rgp_accel_cpp.cp311-win_amd64.pyd  _rgp_accel_cpp.cp313-win_amd64.pyd  afg_tools.py  afg_tools_ui.py  all_py.txt  blueprint_tab_ui.py  custom_step.py  custom_step_ui.py  custom_step_widget.py  data_centric_folder_creator.py  game_tools_disconnect.py  game_tools_disconnect_ui.py  guide.py  guide_diff_ui.py  guide_manager.py  guide_manager_component.py  guide_manager_component_ui.py  guide_manager_gui.py  guide_template.py  guide_template_explorer.py  guide_template_explorer_ui.py  guide_tools.py  guide_ui.py  io.py  menu.py  mocap_tools.py  naming.py  naming_rules_ui.py  plebes.py  relative_guide_placement.py  translated.txt  utils.py
release/scripts/mgear/shifter/build_log/: __init__.py  core.py  ui.py
release/scripts/mgear/shifter/component/: __init__.py  chain_guide_initializer.py  chain_guide_initializer_ui.py  guide.py  joint_names_ui.py  main_settings_ui.py
release/scripts/mgear/shifter/custom_step_templates/: __init__.py  blank.py  import_anim_picker.py  import_channel_master_config.py  import_eye_rigger_config.py  import_guide_visualizer_config.py  import_rbf_config.py  import_sdk_config.py  import_skin_pack.py
release/scripts/mgear/shifter/game_tools_fbx/: anim_clip_widgets.py  fbx_batch.py  fbx_export_node.py  fbx_exporter.py  partition_widgets.py  sdk_utils.py  utils.py
release/scripts/mgear/shifter/guide_explorer/: guide_explorer_widget.py  guide_tree_widget.py  models.py  utils.py  (+2 more)
release/scripts/mgear/simpleRig/: menu.py  simpleRigTool.py  simpleRigUI.py
release/scripts/mgear/uegear/: bridge.py  commands.py  menu.py
release/scripts/mgear/utilbits/: menu.py  random_colors.py  xplorer.py
src/: rollSplineKine.cpp
(+137 files in other folders)
